--- a/CadastroDeMusicas/TODO.txt
+++ b/CadastroDeMusicas/TODO.txt
@@ -1,3 +1,11 @@
+ALTER TABLE `musica` DROP `nomearquivo`;
+
+
+
+
+
+
+
 INSERT INTO configuracoes VALUES('titulo', 'Sistema de Cadastro de Músicas');
 INSERT INTO configuracoes VALUES('tipo_sistema', 'MUSICAS');
 INSERT INTO configuracoes VALUES('item_menu_musicas', 'Músicas');
